# gitstats

./: .dockerignore  .env  .env.example  .env.test  .gitignore  Dockerfile  Makefile  PROJECT_REQUIREMENT.md  README.md  deployment.md  docker-compose.yml  entrypoint.sh  env.schema  pyproject.toml  pyrightconfig.json  request.http  requirements.txt  run.py  server_log.txt  server_log_debug.txt  server_output.txt
app/: main.py
app/api/: auth.py  views.py
app/core/: config.py  db.py  redis.py  security.py
app/models/: user.py
app/services/: ai.py  ai_providers.py  github.py  rank.py  render.py
app/templates/: dashboard.html  index.html  layout.html
initdb/: docker-entrypoint.initdb.sh
src/: __init__.py
src/auth/: __init__.py
src/auth/models/: user.py
src/common/: const.py  error.py  limiter.py  login.py
src/core/: __init__.py
src/core/models/: insight.py  user.py
src/core/templates/: base.html  download.html  file.html  index-old.html  index.html  login.html  other.html  session.html
src/dashboard/: __init__.py
src/dashboard/models/: stats.py
src/insights/: __init__.py
src/scripts/: db-init.py  seed-db.py
src/services/: github.py
src/static/css/: landing.css  layout.css  styles.css
src/static/js/: scripts.js
tests/: test_ai.py  test_conf.py  test_rank.py  test_security.py
tests/auth/: test_auth.py
tests/core/: test_core_bp.py
tests/dashboard/: test_dashboard_resume.py  test_dashboard_settings.py  test_dashboard_sharing.py  test_dashboard_stats.py
